tests/baselines/reference/typeOfThisInStaticMembers7(target=es6).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers7.ts(3,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers7.ts(8,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers7.ts(9,33): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers7.ts (3 errors) ====
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static e = 1 + (super.a) + (this.c + 1) + 1;
                                    ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    